--- a/client/style.css
+++ b/client/style.css
@@ -79,17 +79,17 @@ button {
   margin-bottom: -10px;
 }
 
-#play-pause-button {
+#buttons > button {
   width: 48px;
   opacity: 0.4;
 }
 
-#play-pause-button:focus,
-#play-pause-button:hover {
+#buttons > button:focus,
+#buttons > button:hover {
   opacity: 0.6;
 }
 
-#play-pause-button img {
+#buttons > button img {
   width: 100%;
 }
 
